<resources>
    <string name="app_name">OnlineCinema</string>
    <string name="home_item">Главная</string>
    <string name="search_item">Поиск</string>
    <string name="fav_item">Избранное</string>
    <string name="profile_item">Профиль</string>
    <string name="warning_msg_acc">Авторизуйтесь в системе,\n чтобы использовать полный функционал.</string>
    <string name="authorize_text">Авторизоваться</string>
    <string name="exit_text">Выйти</string>
    <string name="searchHintText">Введите название фильма</string>
    <string name="no_rez_search_text">Ничего не нашлось,\n попробуйте найти что-то другое,\n или</string>
    <string name="no_rez_button_text">Перейти на главную</string>
    <string name="auth_text">Войти</string>
    <string name="reg_text">Зарегистрироваться</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="repeat_password_text">Повторите пароль</string>
    <string name="greeting_text">Добро\nпожаловать</string>
    <string name="creating_acc_text">Создайте\nаккаунт</string>
    <string name="filter_settings_text">Настройки поиска</string>
    <string name="remove_settings_text">Сбросить</string>
    <string name="save_settings_text">Сохранить</string>
    <string name="to_mark_text">Оценка</string>
    <string name="to_like_text">Нравится</string>
    <string name="to_watch_text">Смотреть</string>
    <string name="to_block_n_unblock_text">Разблокировать/заблокировать\nпользователя</string>
    <string name="to_appoint_admin_text">Назначить администратора</string>
    <string-array name="settings_of_sort">
        <item>по возрастанию</item>
        <item>по убыванию</item>
    </string-array>
    <string-array name="countries">
        <item>любая</item>
        <item>Финляндия</item>
        <item>Новая Зеландия</item>
        <item>Китай</item>
        <item>Великобритания</item>
        <item>Германия (ФРГ)</item>
        <item>Нидерланды</item>
        <item>Россия</item>
        <item>Австралия</item>
        <item>Швейцария</item>
        <item>Люксембург</item>
        <item>Норвегия</item>
        <item>Германия</item>
        <item>Корея Южная</item>
        <item>Таиланд</item>
        <item>Марокко</item>
        <item>Швеция</item>
        <item>Ирландия</item>
        <item>США</item>
        <item>Канада</item>
        <item>Дания</item>
        <item>Гонконг</item>
        <item>Мальта</item>
        <item>Бельгия</item>
        <item>Беларусь</item>
        <item>Франция</item>
        <item>Италия</item>
        <item>СССР</item>
        <item>Япония</item>
        <item>Мексика</item>
        <item>Испания</item>
        <item>Польша</item>
        <item>Индия</item>
    </string-array>
    <string-array name="genres">
        <item>любой</item>
        <item>музыка</item>
        <item>комедия</item>
        <item>фантастика</item>
        <item>мюзикл</item>
        <item>биография</item>
        <item>мультфильм</item>
        <item>семейный</item>
        <item>боевик</item>
        <item>детектив</item>
        <item>фэнтези</item>
        <item>триллер</item>
        <item>драма</item>
        <item>ужасы</item>
        <item>военный</item>
        <item>приключения</item>
        <item>аниме</item>
        <item>вестерн</item>
        <item>спорт</item>
        <item>история</item>
        <item>мелодрама</item>
        <item>криминал</item>
    </string-array>
    <string name="pwd_valid_text">Пароль должен быть длиной не менее 8 символов,\nсодержать буквы латинского алфавита,\nцифру, букву в верхнем регистре,\nспециальный символ: #?!@$%^*-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>