<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationFragment"
    android:background="@color/background">

    <ImageView
        android:id="@+id/iconGreeting"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_people_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/acc_enter_info_bg"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/primary_color"
        android:hint="@string/login_text"
        android:textColorHint="@color/primary_color"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconGreeting"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/primary_color"
        android:paddingStart="20dp"
        android:hint="@string/password_text"
        android:textColorHint="@color/primary_color"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        app:layout_constraintVertical_bias="0.04"
        android:background="@drawable/acc_enter_info_bg"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/authButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/auth_text"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>