<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/arrowBackButtonMovie"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:id="@+id/posterView"
            android:layout_width="180dp"
            android:layout_height="270dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="Название фильма"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterView"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/origNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="Оригинальное название"
            android:textColor="@color/message_color"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieName"
            app:layout_constraintVertical_bias="0" />

        <LinearLayout
            android:id="@+id/detailsMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/origNameView"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/ratingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Рейтинг: "
                android:textColor="@color/primary_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/durationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Продолжительность: "
                android:textColor="@color/primary_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/genresView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Жанры:"
                android:textColor="@color/primary_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/countryView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cтраны: "
                android:textColor="@color/primary_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/yearView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Год: "
                android:textColor="@color/primary_color"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/markValueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Ваша оценка: "
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/detailsMovie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="gone"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/markSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="10"
            app:thumbColor="@color/primary_color"
            app:tickColor="@color/transparent"
            app:trackColorActive="@color/primary_color"
            app:labelBehavior="gone"
            app:layout_constraintTop_toBottomOf="@+id/markValueText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="gone"/>

        <Button
            android:id="@+id/saveMarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Сохранить оценку"
            android:background="@color/transparent"
            android:textColor="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@+id/markSlider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/featuresField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveMarkButton"
            android:layout_margin="15dp">

            <Button
                android:id="@+id/markButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:drawableTop="@drawable/round_star_24"
                android:text="@string/to_mark_text" />

            <Button
                android:id="@+id/watchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/favButton"
                android:layout_toEndOf="@+id/markButton"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:drawableTop="@drawable/round_play_arrow_30"
                android:text="@string/to_watch_text" />

            <Button
                android:id="@+id/favButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:drawableTop="@drawable/ic_baseline_fav"
                android:text="@string/to_like_text" />

        </RelativeLayout>

        <TextView
            android:id="@+id/descHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Описание фильма"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuresField"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/hideNshowButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/baseline_open_full_text_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/descHeader"
            app:layout_constraintTop_toBottomOf="@+id/featuresField"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/descText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="Текст"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descHeader"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>